@@ -85,6 +85,7 @@ Peter Barnes
 phijor
 Pierre Dorbais (chdorb)
 Rainer Suhm
+Regis
 RetekBacsi
 Richard Benson
 Robert Sarkozi
