@@ -133,6 +133,9 @@
 	Added optional argument for --logging parameter that specifies path to
 	startup log.  Thanks to Cosmin Popescu (a.k.a. cosminadrianpopescu).
 
+	Added handling of "%u" in trash specification, which is replaced with real
+	user ID.  Thanks to Regis.
+
 	Do not finish argument parsing after finding --help or --version,
 	continue and validate the rest of command-line.  Thanks to Svyatoslav
 	Mishyn (a.k.a. juef).
